plugins {
    id 'java'
}

group = 'net.creativious'
version = '0.1.2'

sourceCompatibility = JavaVersion.VERSION_21
targetCompatibility = JavaVersion.VERSION_21

tasks.withType(JavaCompile).each {
    it.options.compilerArgs.add('--enable-preview')
}

repositories {
    mavenCentral()
    maven { url 'https://jitpack.io' }
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.9.1')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    implementation 'com.github.ShirasawaSama:JavaSharedMemory:0.2.1'
}

test {
    useJUnitPlatform()
    jvmArgs(['--enable-preview', '--enable-native-access=ALL-UNNAMED'])
}